Initial JavaScript game logic defined
- Created variables to target start button, homepage banner section, the main HTML element, and timer element

- Created a questions and answers array

- Created a render question function, which gets the current question by using an empty question index array i declared, then creates elements to match the html structure and css classes and ID's i defined earlier

- Created a function that validates that when the quiz is running, only a list item has been clicked, and then gets the question and answer the user clicked on, and puts them both in an answer object, which i intend to send to local storage

- Created a function that removes the homepage banner section from the page when the user clicks the start button

- Connected all these functions together with a function that gets triggered when the start button is clicked - handleStartButtonClick - this then triggers removeBanner(), renderQuestion() and startGame() which renders the first question and starts the timer

--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
                     />
                     <!-- need to validate here - if value is empty, render an error message saying name field can't be blank -->
             </div>
+            
+            <!-- Maybe display the users answers here, pulling from local storage to show which ones were answered right and which were incorrect, maybe like a top 10 or top 5 high scores table-->
+
+            <!-- Can also have this high scores table available on the high score page which can be reached from the link in the top navigation -->
             <div class="form-control">
                 <button class="btn-2" type="submit">Submit</button>
                 <!-- javascript function needed here - call it handleSubmit  -->
